# cmake-project-template

./: CMakeLists.txt  build-and-run
src/: CMakeLists.txt  main.cpp
src/feature/: CMakeLists.txt  feature.cpp  feature.h
test/: CMakeLists.txt
test/src/: template_project_tests.cpp
